@@ -1,0 +1,3 @@
+#include <tao/LongSeq.pidl>
+
+typedef sequence<long> MyLongSeq;
