@@ -1,3 +1,12 @@
+Thu Jan 10 20:45:55 UTC 2013  Adam Mitz  <mitza@ociweb.com>
+
+        * bin/tao_orb_tests.lst:
+        * tests/Bug_4082_Regression/Bug_4082_Regression.idl:
+        * tests/Bug_4082_Regression/Bug_4082_Regression.mpc:
+        * tests/Bug_4082_Regression/Bug_4082_Regression.cpp:
+
+          Added a new test for this bug (regression currently fails).
+
 Mon Jan  7 14:00:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>
 
         * tao/Transport.inl:
